MMA-8118 ryddet opp ubrukt import og exception